<resources>
    <string name="app_name">SAT_app</string>
    <string name="title_activity_settings_mode">SettingsMode</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
    <string name="this_is_where_the_passage_goes">This is where the passage goes</string>
    <string name="_00_00">00:00</string>
    <string name="textview">TextView</string>
    <string name="next_question">Next Question</string>
    <string name="_100">100</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="question_goes_here">Question Goes Here</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="todo">TODO</string>
</resources>