<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sat_app.PracticeMode">
    <!--<tools:openDrawer="start">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PM_Parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PracticeMode">

        <ScrollView
            android:id="@+id/PMG_ScrollViewPassage"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/PMG_EnglishPassage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/PMG_LineNumbers"
                    android:layout_alignLeft="@+id/PMG_LineNumbers"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/this_is_where_the_passage_goes"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:paddingBottom="32dp">

                </TextView>

                <TextView
                    android:id="@+id/PMG_LineNumbers"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/_100"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/PMG_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/PMG_EnglishPassage"
                    tools:ignore="ContentDescription"
                    android:paddingBottom="32dp"/>
            </RelativeLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/PMG_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/PMG_ScrollViewPassage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/PMG_Timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_00_00"
            app:layout_constraintBottom_toTopOf="@+id/PMG_ScrollViewPassage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/PMG_Question_ScrollView"
            android:layout_width="331dp"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/PMG_ViewNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PMG_Question">

            <RadioGroup
                android:id="@+id/PMG_RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/PMG_OptionA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_a" />

                <RadioButton
                    android:id="@+id/PMG_OptionB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/option_b" />

                <RadioButton
                    android:id="@+id/PMG_OptionC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/option_c" />

                <RadioButton
                    android:id="@+id/PMG_OptionD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/option_d" />
            </RadioGroup>
        </ScrollView>

        <TextView
            android:id="@+id/PMG_Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_goes_here"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PMG_ScrollViewPassage" />

        <Button
            android:id="@+id/PMG_ViewNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/PMG_ViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/PMG_QuestionCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/textview"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@+id/PMG_ScrollViewPassage"
            app:layout_constraintStart_toEndOf="@+id/PMG_progressBar" />

        <ImageButton
            android:id="@+id/PMG_Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-1dp">

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/PMG_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        tools:ignore="MissingClass" />

</androidx.drawerlayout.widget.DrawerLayout>